5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4067/executions/1602_2894.log
== SUBMITION (2019-03-20 18:42:14) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
Var = float(input(30))

# Calculo do valor a ser pago, incluindo o frete:
total = (30+(45*1))

# Impressao do valor total:
print("total")
-- EXECUTION TIME:
0.160524
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
30total
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
30total
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
30total
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:42:32) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float
Var = float(input(30))

# Calculo do valor a ser pago, incluindo o frete:
total = (30+(45*1))

# Impressao do valor total:
print("total")
-- EXECUTION TIME:
0.123399
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
30total
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
30total
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
30total
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:50:55) 
-- CODE:
varA = float(input("30.0"))
varB = float(input("8.0"))
varC = float(input("45.0"))

total = ("varA+(varB*varC)")
print("total")
-- EXECUTION TIME:
0.157566
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 2, in <module>
    varB = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:53:33) 
-- CODE:
var = float(input("30.0"))
total 8*var+45
print("total")
-- EXECUTION TIME:
0.187372
-- ERROR:
  File "/home/codebench/codes/1602/2894/main.py", line 2
    total 8*var+45
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:54:03) 
-- CODE:
var = float(input("30.0"))
total 8*(var+45)
print("total")
-- EXECUTION TIME:
0.153019
-- ERROR:
  File "/home/codebench/codes/1602/2894/main.py", line 2
    total 8*(var+45)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:54:11) 
-- CODE:
var = float(input("30"))
total 8*(var+45)
print("total")
-- EXECUTION TIME:
0.113717
-- ERROR:
  File "/home/codebench/codes/1602/2894/main.py", line 2
    total 8*(var+45)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:54:28) 
-- CODE:
var = float(input("30"))
total 8*var+45
print("total")
-- EXECUTION TIME:
0.206062
-- ERROR:
  File "/home/codebench/codes/1602/2894/main.py", line 2
    total 8*var+45
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:54:57) 
-- CODE:
var = float(input("30"))
total= 8*var+45
print("total")
-- EXECUTION TIME:
0.102931
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
total
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
30total
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
30total
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:55:01) 
-- CODE:
var = float(input("30"))
total = 8*var+45
print("total")
-- EXECUTION TIME:
0.204876
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
total
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
total
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
total
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:55:05) 
-- CODE:
var = float(input("30"))
total = 8*var+45
print ("total")
-- EXECUTION TIME:
0.149207
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
total
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
total
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
total
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:55:27) 
-- CODE:
var = float(input("30"))
total = 8*var+45
print (total)
-- EXECUTION TIME:
0.158591
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:31:38) 
-- CODE:
var = float(input("30")
b= 8
c= 45
total (var*8+45)
				print(total)
-- EXECUTION TIME:
0.145328
-- ERROR:
  File "/home/codebench/codes/1602/2894/main.py", line 2
    b= 8
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:31:43) 
-- CODE:
var = float(input("30")
b= 8
c= 45
total (var*8+45)
				print(total)
-- EXECUTION TIME:
0.156608
-- ERROR:
  File "/home/codebench/codes/1602/2894/main.py", line 2
    b= 8
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:32:32) 
-- CODE:
var = float(input("preço dos jogos")
total (var*8+45)
print(total)
-- EXECUTION TIME:
0.165434
-- ERROR:
  File "/home/codebench/codes/1602/2894/main.py", line 2
    total (var*8+45)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:32:56) 
-- CODE:
var = float(input("preço dos jogos")
total = var*8+45
print(total)
-- EXECUTION TIME:
0.129083
-- ERROR:
  File "/home/codebench/codes/1602/2894/main.py", line 2
    total = var*8+45
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:35:09) 
-- CODE:
var = float(input("preço dos jogos")
a = int(input("jogos"))
b = float(input("frete"))
total = var*a+b
print(total)
-- EXECUTION TIME:
0.210741
-- ERROR:
  File "/home/codebench/codes/1602/2894/main.py", line 2
    a = int(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:35:12) 
-- CODE:
var = float(input("preço dos jogos")
a = int(input("jogos"))
b = float(input("frete"))
total = var*a+b
print(total)
-- EXECUTION TIME:
0.301797
-- ERROR:
  File "/home/codebench/codes/1602/2894/main.py", line 2
    a = int(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:35:13) 
-- CODE:
var = float(input("preço dos jogos")
a = int(input("jogos"))
b = float(input("frete"))
total = var*a+b
print(total)
-- EXECUTION TIME:
0.166671
-- ERROR:
  File "/home/codebench/codes/1602/2894/main.py", line 2
    a = int(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:35:13) 
-- CODE:
var = float(input("preço dos jogos")
a = int(input("jogos"))
b = float(input("frete"))
total = var*a+b
print(total)
-- EXECUTION TIME:
0.284012
-- ERROR:
  File "/home/codebench/codes/1602/2894/main.py", line 2
    a = int(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:35:14) 
-- CODE:
var = float(input("preço dos jogos")
a = int(input("jogos"))
b = float(input("frete"))
total = var*a+b
print(total)
-- EXECUTION TIME:
0.226619
-- ERROR:
  File "/home/codebench/codes/1602/2894/main.py", line 2
    a = int(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:35:14) 
-- CODE:
var = float(input("preço dos jogos")
a = int(input("jogos"))
b = float(input("frete"))
total = var*a+b
print(total)
-- EXECUTION TIME:
0.280468
-- ERROR:
  File "/home/codebench/codes/1602/2894/main.py", line 2
    a = int(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:35:14) 
-- CODE:
var = float(input("preço dos jogos")
a = int(input("jogos"))
b = float(input("frete"))
total = var*a+b
print(total)
-- EXECUTION TIME:
0.500382
-- ERROR:
  File "/home/codebench/codes/1602/2894/main.py", line 2
    a = int(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:35:14) 
-- CODE:
var = float(input("preço dos jogos")
a = int(input("jogos"))
b = float(input("frete"))
total = var*a+b
print(total)
-- EXECUTION TIME:
0.388334
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1602/2894/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:35:19) 
-- CODE:
var = float(input("preço dos jogos")
a = (input("jogos"))
b = float(input("frete"))
total = var*a+b
print(total)
-- EXECUTION TIME:
0.170427
-- ERROR:
  File "/home/codebench/codes/1602/2894/main.py", line 2
    a = (input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:35:29) 
-- CODE:
var = float(input("preço dos jogos")
a = input("jogos")
b = float(input("frete"))
total = var*a+b
print(total)
-- EXECUTION TIME:
0.130121
-- ERROR:
  File "/home/codebench/codes/1602/2894/main.py", line 2
    a = input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:14:10) 
-- CODE:
var = float(input("preço dos jogos")
a = input("jogos")
total = var*a+b
print(total)
-- ERROR:
File "XXXX", line 2
    a = input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:16:44) 
-- CODE:
var = float(input("preço dos jogos")
a = int(input("jogo"))
total = var*a+b
print(total)
-- ERROR:
File "XXXX", line 2
    a = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:20:38) 
-- CODE:
var = float(input("unidade de jogo"))
total =var*8+45
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:21:07) 
-- CODE:
var = float(input("unidade de jogo"))
total =var*8+45
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 14:21:41) 
-- CODE:
var = float(input("Instrucoes: "))
total =var*8+45
print(total)
-- EXECUTION TIME:
0.124758
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 14:22:12) 
-- CODE:
var = float(input("Instrucoes: "))
total =var*8+45
print(total)
-- EXECUTION TIME:
0.182519
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
